# FirstQTProject

./: CMakeLists.txt  arithmetic.cpp  arithmetic.h  main.cpp
